fixed z-index issue

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
 .nav__list {
@@ -108,6 +109,7 @@ body {
 .gallery__tile img:hover {
     opacity: .5;
     transition: .5s ease;
+    z-index: -999;
 }
 
 .gallery__image {
